--- a/report_style.tex
+++ b/report_style.tex
@@ -47,7 +47,7 @@
 %\usepackage[ngerman]{babel}
 
 %%% inputenc: coding of german special characters
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 
 %%% fontenc, ae, aecompl: coding of characters in PDF documents
 \usepackage[T1]{fontenc}
