Correct some minor issues and finish lab 3.

--- a/Lab2/report_lab2.tex
+++ b/Lab2/report_lab2.tex
@@ -475,7 +475,7 @@ Using a color camera perform the following tasts:
 
 A picture of the printed reference target was taken and loaded in a Matlab-script. Based on the color information of this picture and the reference colors two strategies to color-calibrate the camera were implemented. \\
 
-First uses a corespondence-matrix $M \in \R ^{3\times 3}$, such that
+The first uses a corespondence-matrix $M \in \R ^{3\times 3}$, such that
 \begin{align*}  r = M c \text{,} \end{align*}
 where $c \in \R^3$ is the pixel color of the image and $r \in \R^3$ is the corrected color.
 
