--- a/Lab3/report_lab3.tex
+++ b/Lab3/report_lab3.tex
@@ -259,6 +259,102 @@ For this exercise perform the following tasks:
 
 \subsection{Solution}
 
+We were given a set of images that contained a calibartion target which varied its $x,y$ and $z$ position.
+The first step was to compute the projection matrix $\mathbf{P}$ which is done by the matlab script snippet shown in Listing \ref{lst:pcalc}.
+In order to calculate $\mathbf{P}$ we formed the matrix $\mathbf{A}$ using the points we acquired via the \lstinline{markCorners()} function.
+The points are then normalized using the given \lstinline{normalizePoints()} function which returns the normalized points and the transformation matrix.
+$\mathbf{A}$ in the code is the $\mathbf{X^T}_i$ matrix.
+Then a linear system of equations is solved in order to receive the projection matrix $\mathbf{P}$.
+
+\begin{lstlisting}[label=lst:pcalc, caption=Matlab script setting up linear equation system]
+
+%% LOAD WRLD POINTS
+load(wrld_fname);
+pt_w_ = [PT; ones(1,size(PT,2))];
+
+% EXTRACT IMAGE MEASUREMENTS
+fnames = dir([img_dir img_type]);
+N = size(fnames,1);
+pt_i_ = ones(3, N);
+
+for i=1:N
+    img = im2double(imread([img_dir, fnames(i).name]));
+    pt_i_(1:2,i) = markCorners(img,1);
+end
+
+% NORMALIZE POINTS
+[pt_i_n, T] = normalizePoints( pt_i_ );
+[pt_w_n, U] = normalizePoints( pt_w_ );
+
+A = zeros(2*N,12);
+
+for i = 1:10
+   A(2*i-1,:) = [0 0 0 0 -(pt_i_n(3,i) * pt_w_n(:,i)') (pt_i_n(2,i) * pt_w_n(:,i)')];
+   A(2*i,  :) = [(pt_i_n(3,i) * pt_w_n(:,i)') 0 0 0 0 -(pt_i_n(1,i) * pt_w_n(:,i)')];
+end
+
+%% SOLVE LIN SYSTEM
+[~,~,V] = svd(A);
+P_n = V(:,end);
+P_n = reshape(P_n,4,3)';
+P = T^(-1)*P_n*U;
+\end{lstlisting}
+
+To extract the necessary information from the projection matrix we assume it has the following form:
+
+$$ \mathbf{P} = \mathbf{[M|-M\tilde{C}]} $$
+
+Using this information we solve projection matrix $\mathbf{P}$ for the camera center vector $\mathbf{\tilde{C}}$, using the convenient \lstinline{\} operator from Matlab, as seen in the beginning of Listing \ref{lst:krc}.
+Then we calculate $\mathbf{K}$ and $\mathbf{R}$ using the given \lstinline{rq()} decomposition method.
+The results were:
+
+$$
+\mathbf{K} = 10^{-3} \cdot \left(\begin{array}{lll}
+4.2456 & -0.0425 & 2.7451\\
+0 & -4.2582 & 1.7604\\
+0 & 0 & 0.0010
+\end{array}\right)
+$$
+
+$$
+\mathbf{R} = \left(\begin{array}{lll}
+0.0296 & 0.9995 & 0.0136\\
+0.0155 & -0.0141 & 0.9998\\
+-0.9994 & 0.0294 & 0.0159
+\end{array}\right)
+$$
+
+$$
+\mathbf{C} = \left(\begin{array}{l}
+289.4794\\
+-288.2710\\
+-208.7799
+\end{array}\right)
+$$
+
+The focal length $f$ had a value of $f = 18.2559mm$.
+Finally, Figure \ref{fig:camPro_recalc} shows the recalculated reference position and the calibration position within one image.
+
+\begin{lstlisting}[label=lst:krc, caption=Matlab script to determine $\mathbf{K}\, \mathbf{R}$ and $\mathbf{C}$ ]
+M = P(:,1:3);
+C = - M \ P(:,4);
+
+[K,R] = rq(M);
+K = K / K(3,3);
+
+%% focal length
+f = K(1,1) * 4.3e-3 %in mm
+
+%% show calculated image point vs. selected point
+figure;
+imshow(img);
+pt = pt_w_(:,end);
+px = P*pt;
+x1 = 1/px(3) * px(1);
+y1 = 1/px(3) * px(2);
+\end{lstlisting}
+
+
 %%% K,R and C matrizes
 % >> K
 % K =
@@ -267,10 +363,7 @@ For this exercise perform the following tasks:
 %          0   -4.2582    1.7604
 %          0         0    0.0010
 % >> R
-% R =
-%     0.0296    0.9995    0.0136
-%     0.0155   -0.0141    0.9998
-%    -0.9994    0.0294    0.0159
+
 % >> C
 % C =
 %   289.4794
@@ -285,8 +378,6 @@ For this exercise perform the following tasks:
  \caption{Recalculated reference position (red) and calibration position (blue)}
  \label{fig:camPro_recalc}
 \end{figure}
-
-\subsection{Discussion}
 
 \begin{thebibliography}{XX}
   \bibitem{HO}Laboratory Handout: \textit{Lab3--Geometry}. \\
